@@ -389,9 +389,9 @@ public class SeriesEditorDialog extends JDialog
 								clearBufferRow(bufferIndex);
 								
 								if (columnIndex == 0)
-									SeriesEditor.this.xySeries.addOrUpdate(new Double(value), otherBufferValue);
+									SeriesEditor.this.xySeries.addOrUpdate(Double.valueOf(value), otherBufferValue);
 								else
-									SeriesEditor.this.xySeries.addOrUpdate(otherBufferValue, new Double(value));
+									SeriesEditor.this.xySeries.addOrUpdate(otherBufferValue, Double.valueOf(value));
 							}
 						}
 					}
@@ -418,7 +418,7 @@ public class SeriesEditorDialog extends JDialog
 							
 							Double yValue = SeriesEditor.this.xySeries.getY(rowIndex).doubleValue();
 							SeriesEditor.this.xySeries.remove(rowIndex);
-							SeriesEditor.this.xySeries.addOrUpdate(new Double(value), yValue);							
+							SeriesEditor.this.xySeries.addOrUpdate(Double.valueOf(value), yValue);							
 						}
 											
 						else
